# g4_minimal

./: README.md  main.cc  run.mac
ch0_initial/: CMakeLists.txt
ch0_initial/include/: PrimaryGeneratorAction.hh
ch0_initial/src/: DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc
ch1_DetCon/: README.md
ch1_DetCon/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh
ch2_PriGen/: main.cc
ch2_PriGen/include/: RunAction.hh
ch2_PriGen/src/: ActionInitialization.cc  DetectorConstruction.cc  PrimaryGeneratorAction.cc
ch3_scoring/: run.mac
ch3_scoring/src/: EventAction.cc  RunAction.cc
ch4_analysis/: CMakeLists.txt  vis.mac
ch4_analysis/include/: EventAction.hh
ch4_analysis/src/: DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc
hello_geant4/: CMakeLists.txt  main.cc
include/: EventAction.hh
src/: DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc
